--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,12 @@
+* {
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Roboto";
+  margin: 0;
+}
+
 .App {
   text-align: center;
 }
